@@ -4,6 +4,15 @@
 (__)(__)(_)\_) \___)(_) (_)(____)  \/  (____)(___/ (__)   (____)
 
 ===============================================================================
+# Archivist Beta 3                                                            #
+===============================================================================
+- Background loading of cards and libary
+- Warning for download image
+- Resize of oversized cards
+- Search result card count
+
+
+===============================================================================
 # Archivist Beta 2                                                            #
 ===============================================================================
 - Sideboard
